--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9",
-    "axios": "^1.5.0"
+    "axios": "^1.12.2",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
